# chickchat

./: README.md
backend/: .env.example  Cargo.toml  Rocket.toml
backend/migrations/2025-03-03-120829_create_message/: down.sql  up.sql
backend/migrations/2025-03-12-090555_create_user/: down.sql  up.sql
backend/migrations/2025-03-12-091706_create_chat/: down.sql  up.sql
backend/src/: chat.rs  cors.rs  database.rs  main.rs  message.rs  schema.rs
backend/src/util/: mod.rs  pagination.rs  validation.rs
frontend/: Cargo.toml
frontend/public/: styles.scss
frontend/src/: lib.rs  main.rs
frontend/src/components/: chat_list.rs  chat_sidebar.rs  chat_window.rs  message_input.rs  message_list.rs  mod.rs  new_chat_dialog.rs
frontend/src/models/: chat.rs  message.rs  user.rs
frontend/src/pages/: home.rs
frontend/src/util/: env.rs  infinite_scroll.rs  mod.rs
src/: main.rs  message.rs
src/model/: message.rs
